--- a/client/src/app/add-item/add-item.component.html
+++ b/client/src/app/add-item/add-item.component.html
@@ -1,2 +1,2 @@
-<h2 class="text-center m-5">Add an Item to the Grocery List</h2>
+<h2 class="text-center">Add an Item</h2>
 <app-item-form></app-item-form>
