--- a/client/src/app/all-items/all-items.component.css
+++ b/client/src/app/all-items/all-items.component.css
@@ -20,7 +20,7 @@
     padding: 0 0 0 30px;
 }
 
-button {
-    margin-left:5px;
-    padding: 0 2px 0 2px;
+.add-button {
+    display:flex;
+    justify-content: flex-end;
 }
