--- a/client/src/app/item-form/item-form.component.css
+++ b/client/src/app/item-form/item-form.component.css
@@ -1,5 +1,8 @@
 .item-form {
+    display: flex;
+    flex-direction: column;
     max-width: 560px;
     margin-left: auto;
     margin-right: auto;
+    margin-top:1em;
 }
