--- a/client/src/app/item-form/item-form.component.html
+++ b/client/src/app/item-form/item-form.component.html
@@ -1,36 +1,55 @@
 <form class="item-form" [formGroup]="itemForm" (ngSubmit)="submitForm()">
-    <mat-form-field>
-        <label for="item">Item Name</label>
-        <input class="form-control" type="text" id="item" formControlName="item" placeholder="Item Name" required/>
-    </mat-form-field>
+  <mat-form-field>
+    <mat-label for="item">Item Name</mat-label>
+    <input matInput type="text" id="item" name="item" formControlName="item" required />
+  </mat-form-field>
 
-    <div *ngIf="item.invalid && (item.dirty || item.touched)" class="alert alert-danger">
-        <div *ngIf="item.errors?.['required']">
-            Name is required.
-        </div>
-        <div *ngIf="item.errors?.['minlength']">
-            Name must be at least 3 characters long.
-        </div>
+  <div
+    *ngIf="item.invalid && (item.dirty || item.touched)"
+    class="alert alert-danger">
+    <div *ngIf="item.errors?.['required']">Item Name is required.</div>
+    <div *ngIf="item.errors?.['minlength']">
+      Item Name must be at least 3 characters long.
     </div>
+  </div>
 
-    <mat-form-field >
-        <mat-label>Frequency</mat-label>
-        <select matNativeControl>
-            <option value="One-Time Request">One-Time Request</option>
-            <option value="Weekly">Weekly</option>
-            <option value="Monthly">Monthly</option>
-            <option value="Indefinitely">Indefinitely</option>
-        </select>
-    </mat-form-field>
+  <mat-form-field>
+    <mat-select id="frequency" formControlName="frequency" required>
+      <mat-option value="One-Time Request">One-Time Request</mat-option>
+      <mat-option value="Weekly">Weekly</mat-option>
+      <mat-option value="Monthly">Monthly</mat-option>
+      <mat-option value="Indefinite">Indefinite</mat-option>
+    </mat-select>
+    <mat-label> <strong> Frequency</strong> </mat-label>
+  </mat-form-field>
 
-    <mat-form-field class="bd-3">
-        <mat-label>Store</mat-label>
-        <select>
-            <option value="Aldi">Aldi</option>
-            <option value="Jewel Osco">Jewel Osco</option>
-            <option value="Pete's Fresh Market">Pete's Fresh Market</option>
-            <option value="Online">Online</option>
-        </select>
-    </mat-form-field>
+  <div
+  *ngIf="frequency.invalid && (frequency.dirty || frequency.touched)"
+  class="alert alert-danger">
+  <div *ngIf="item.errors?.['required']">Frequency is required.</div>
+</div>
+
+<mat-form-field>
+    <mat-label for="inStock">In Stock</mat-label>
+    <input matInput type="number" id="inStock" name="inStock" formControlName="inStock" required />
+</mat-form-field>
+
+  <mat-form-field>
+    <mat-select id="store" name="store" formControlName="store" required>
+      <mat-option value="Aldi">Aldi</mat-option>
+      <mat-option value="Jewel Osco">Jewel Osco</mat-option>
+      <mat-option value="Pete's Fresh Market">Pete's Fresh Market</mat-option>
+      <mat-option value="Online">Online</mat-option>
+    </mat-select>
+    <mat-label> <strong>Store</strong> </mat-label>
+  </mat-form-field>
+
+  <div
+  *ngIf="store.invalid && (store.dirty || store.touched)"
+  class="alert alert-danger">
+  <div *ngIf="item.errors?.['required']">Store is required.</div>
+</div>
+
+  <button mat-raised-button color="primary" type="submit" >Submit</button>
 
 </form>
