--- a/client/src/app/all-items/all-items.component.html
+++ b/client/src/app/all-items/all-items.component.html
@@ -30,7 +30,63 @@
      <mat-icon>{{isAdding?'clear':'add'}}</mat-icon>
     </button>
   </div>
+
   <div *ngIf="isAdding">
-   <app-item-form></app-item-form>
+    <form class="item-form" [formGroup]="itemForm" (ngSubmit)="submitForm()">
+      <mat-form-field>
+        <mat-label for="item"><strong>Item Name</strong></mat-label>
+        <input matInput type="text" id="item" name="item" formControlName="item" required />
+      </mat-form-field>
+    
+      <div
+        *ngIf="item.invalid && (item.dirty || item.touched)"
+        class="alert alert-danger">
+        <div *ngIf="item.errors?.['required']">Item Name is required.</div>
+        <div *ngIf="item.errors?.['minlength']">
+          Item Name must be at least 3 characters long.
+        </div>
+      </div>
+    
+      <mat-form-field>
+        <mat-select id="frequency" formControlName="frequency" required>
+          <mat-option value="One-Time Request">One-Time Request</mat-option>
+          <mat-option value="Weekly">Weekly</mat-option>
+          <mat-option value="Monthly">Monthly</mat-option>
+          <mat-option value="Indefinite">Indefinite</mat-option>
+        </mat-select>
+        <mat-label> <strong> Frequency</strong> </mat-label>
+      </mat-form-field>
+    
+      <div
+      *ngIf="frequency.invalid && (frequency.dirty || frequency.touched)"
+      class="alert alert-danger">
+      <div *ngIf="item.errors?.['required']">Frequency is required.</div>
+    </div>
+    
+    <mat-form-field>
+        <mat-label for="inStock">In Stock</mat-label>
+        <input matInput type="number" id="inStock" name="inStock" formControlName="inStock"/>
+    </mat-form-field>
+    
+      <mat-form-field>
+        <mat-select id="store" name="store" formControlName="store">
+          <mat-option value="Aldi">Aldi</mat-option>
+          <mat-option value="Jewel Osco">Jewel Osco</mat-option>
+          <mat-option value="Pete's Fresh Market">Pete's Fresh Market</mat-option>
+          <mat-option value="Online">Online</mat-option>
+        </mat-select>
+        <mat-label>Store </mat-label>
+      </mat-form-field>
+    
+      <div
+      *ngIf="store.invalid && (store.dirty || store.touched)"
+      class="alert alert-danger">
+      <div *ngIf="item.errors?.['required']">Store is required.</div>
+    </div>
+    
+      <button mat-raised-button color="primary" type="submit">Submit</button>
+    
+    </form>
   </div>
+
 </div>
