--- a/client/src/app/groceries-list/groceries-list.component.css
+++ b/client/src/app/groceries-list/groceries-list.component.css
@@ -1,3 +1,58 @@
 .mt-3 {
-    padding: 0 0 0 30px;
+    padding: 10px 0 0 30px;
+}
+
+.card-contents{
+    margin-bottom: 60px;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tile {
+    display: flex;
+    flex-direction: column;
+    justify-content:start;
+    width: 100%; 
+    align-items: stretch;
+    padding: 10px 5px 5px 6px;
+  }
+  
+.tile-container {
+    padding: 0em 5em 10em 5em;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding: 0px 10px 10px 0px;
+}
+
+.post-it {
+    background-color: rgb(253, 253, 160);
+    border-radius: 2px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 20px 5px 5px 20px;
+    box-shadow:2px 2px 10px darkgrey;
+    width: 90%; 
+}
+
+.post-it-two {
+    background-color: rgb(255, 163, 244);
+    border-radius: 2px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 20px 5px 5px 20px;
+    box-shadow:2px 2px 10px darkgrey;
+    width: 90%; 
 }
