--- a/client/src/app/groceries-list/groceries-list.component.html
+++ b/client/src/app/groceries-list/groceries-list.component.html
@@ -1,118 +1,142 @@
-
 <div class="mt-3">
-    <button color="primary" mat-raised-button routerLink="/all">All Items</button>
+  <button color="primary" mat-raised-button routerLink="/all">All Items</button>
 </div>
 
-
-<mat-grid-list cols="3">
-  <mat-grid-tile> One-Time Request
-    <mat-card *ngFor="let item of items$ | async"> 
-        <div *ngIf="item.frequency=='One-Time Request'">
-            <div class="card-contents-item">
-                {{ item.item }}
+<div class="tile-container">
+  <mat-grid-list cols="10">
+    <mat-grid-tile colspan="3" rowspan="3">
+      <div class="post-it">
+        <h4>One-Time Request</h4>
+        <div class="tile">
+          <div *ngFor="let item of items$ | async">
+            <div
+              class="card-contents"
+              *ngIf="item.frequency == 'One-Time Request'"
+            >
+              <div class="card-contents-item">
+                <h6>{{ item.item }}</h6>
               </div>
-          
               <div class="card-contents-inStock">
                 {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
               </div>
-          
-              <div class="button-container">
-                <button color="primary" mat-mini-fab>
-                  <mat-icon fontIcon="mode"/>
+              <div class="item-buttons">
+                <button color="primary" mat-icon-button>
+                  <mat-icon fontIcon="mode" />
                 </button>
-                <button color="warn" mat-mini-fab >
-                  <mat-icon fontIcon="delete"/>
+                <button color="warn" mat-icon-button>
+                  <mat-icon fontIcon="delete" />
                 </button>
               </div>
-        </div>
-
-    </mat-card>  
-      <button mat-fab color="primary" >
-        <mat-icon>add</mat-icon>
-      </button>
-  </mat-grid-tile>
-
-  <mat-grid-tile> Weekly
-    <mat-card> 
-        <div *ngFor="let item of items$ | async">
-            <div *ngIf="item.frequency=='Weekly'">
-                <div class="card-contents-item">
-                    {{ item.item }}
-                  </div>
-              
-                  <div class="card-contents-inStock">
-                    {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
-                  </div>
-              
-                  <div class="button-container">
-                    <button color="primary" mat-mini-fab>
-                      <mat-icon fontIcon="mode"/>
-                    </button>
-                    <button color="warn" mat-mini-fab >
-                      <mat-icon fontIcon="delete"/>
-                    </button>
-                  </div>
             </div>
-        </div>
-    </mat-card>
-    <button mat-fab color="primary" >
-        <mat-icon>add</mat-icon>
-      </button>
-  </mat-grid-tile>
+          </div>
 
-  <mat-grid-tile> Monthly
-    <mat-card> 
-        <div *ngFor="let item of items$ | async">
-            <div *ngIf="item.frequency=='Monthly'">
-                <div class="card-contents-item">
-                    {{ item.item }}
-                  </div>
-              
-                  <div class="card-contents-inStock">
-                    {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
-                  </div>
-              
-                  <div class="button-container">
-                    <button color="primary" mat-mini-fab>
-                      <mat-icon fontIcon="mode"/>
-                    </button>
-                    <button color="warn" mat-mini-fab >
-                      <mat-icon fontIcon="delete"/>
-                    </button>
-                  </div>
-            </div>
+          <div class="button-container">
+            <button mat-fab color="primary">
+              <mat-icon>add</mat-icon>
+            </button>
+          </div>
         </div>
-    </mat-card>
-    <button mat-fab color="primary" >
-        <mat-icon>add</mat-icon>
-      </button>
-  </mat-grid-tile>
+      </div>
+    </mat-grid-tile>
 
-  <mat-grid-tile> Indefinite
-    <mat-card>
-        <div *ngFor="let item of items$ | async">
-            <div *ngIf="item.frequency=='Indefinite'">
-                <div class="card-contents-item">
-                    {{ item.item }}
-                  </div>
-              
-                  <div class="card-contents-inStock">
-                    {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
-                  </div>
-              
-                  <div class="button-container">
-                    <button color="primary" mat-mini-fab>
-                      <mat-icon fontIcon="mode"/>
-                    </button>
-                    <button color="warn" mat-mini-fab >
-                      <mat-icon fontIcon="delete"/>
-                    </button>
-                  </div>
+    <mat-grid-tile colspan="3" rowspan="3">
+      <div class="post-it-two">
+        <h4>Weekly</h4>
+        <div class="tile">
+          <div *ngFor="let item of items$ | async">
+            <div class="card-contents" *ngIf="item.frequency == 'Weekly'">
+              <div class="card-contents-item">
+                {{ item.item }}
+              </div>
+
+              <div class="card-contents-inStock">
+                {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
+              </div>
+
+              <div class="item-buttons">
+                <button color="primary" mat-icon-button>
+                  <mat-icon fontIcon="mode" />
+                </button>
+                <button color="warn" mat-icon-button>
+                  <mat-icon fontIcon="delete" />
+                </button>
+              </div>
             </div>
+          </div>
+
+          <div class="button-container">
+            <button mat-fab color="primary">
+              <mat-icon>add</mat-icon>
+            </button>
+          </div>
         </div>
-    </mat-card>
-    <button mat-fab color="primary" >
-        <mat-icon>add</mat-icon>
-      </button>
-  </mat-grid-tile>
-</mat-grid-list>
+      </div>
+    </mat-grid-tile>
+
+    <mat-grid-tile colspan="4" rowspan="6">
+      <div class="tile">
+        <h5>Indefinite</h5>
+        <div *ngFor="let item of items$ | async">
+          <mat-card
+            class="card-contents"
+            *ngIf="item.frequency == 'Indefinite'"
+          >
+            <div class="card-contents-item">
+              {{ item.item }}
+            </div>
+
+            <div class="card-contents-inStock">
+              {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
+            </div>
+
+            <div class="item-buttons">
+              <button color="primary" mat-icon-button>
+                <mat-icon fontIcon="mode" />
+              </button>
+              <button color="warn" mat-icon-button>
+                <mat-icon fontIcon="delete" />
+              </button>
+            </div>
+          </mat-card>
+        </div>
+
+        <div class="button-container">
+          <button mat-fab color="primary">
+            <mat-icon>add</mat-icon>
+          </button>
+        </div>
+      </div>
+    </mat-grid-tile>
+
+    <mat-grid-tile colspan="6" rowspan="3">
+      <div class="tile">
+        <h5>Monthly</h5>
+        <div *ngFor="let item of items$ | async">
+          <mat-card class="card-contents" *ngIf="item.frequency == 'Monthly'">
+            <div class="card-contents-item">
+              {{ item.item }}
+            </div>
+
+            <div class="card-contents-inStock">
+              {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
+            </div>
+
+            <div class="item-buttons">
+              <button color="primary" mat-icon-button>
+                <mat-icon fontIcon="mode" />
+              </button>
+              <button color="warn" mat-icon-button>
+                <mat-icon fontIcon="delete" />
+              </button>
+            </div>
+          </mat-card>
+        </div>
+        <div class="button-container">
+          <button mat-fab color="primary">
+            <mat-icon>add</mat-icon>
+          </button>
+        </div>
+      </div>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
