--- a/client/src/app/groceries-list/groceries-list.component.css
+++ b/client/src/app/groceries-list/groceries-list.component.css
@@ -3,7 +3,7 @@
 }
 
 .card-contents{
-    margin-bottom: 60px;
+    margin-bottom: 5em;
     display:flex;
     flex-direction: row;
     justify-content: space-between;
@@ -20,7 +20,7 @@
   }
   
 .tile-container {
-    padding: 0em 5em 10em 5em;
+    padding: 0em 1em 10em 1em;
 }
 
 .button-container {
@@ -31,15 +31,29 @@
     padding: 0px 10px 10px 0px;
 }
 
+.notebook-one {
+    width: 90%;
+    border-radius: 3px;
+    background-color: rgb(255, 255, 255);
+    padding: 20px 5px 5px 15px;
+    background-image: linear-gradient(#ccc 1.1px, transparent 1px);
+    background-size: 100% 30px;
+}
+
+.notebook-two {
+    width: 90%;
+    border-radius: 3px;
+    background-color: rgb(252, 245, 236);
+    padding: 80px 5px 5px 15px;
+    background-image: linear-gradient(#ccc 1px, transparent 1px);
+    background-size: 20px 30px;
+}
+
 .post-it {
     background-color: rgb(253, 253, 160);
     border-radius: 2px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 20px 5px 5px 20px;
+    
+    padding: 20px 5px 5px 15px;
     box-shadow:2px 2px 10px darkgrey;
     width: 90%; 
 }
@@ -52,7 +66,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    padding: 20px 5px 5px 20px;
+    padding: 20px 5px 5px 15px;
     box-shadow:2px 2px 10px darkgrey;
     width: 90%; 
 }
