--- a/client/src/app/all-items/all-items.component.css
+++ b/client/src/app/all-items/all-items.component.css
@@ -8,12 +8,13 @@
 }
 
 .card-contents{
-    margin-bottom: 10px;
-    padding:8px;
+    margin-bottom: 1em;
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     width:60%;
+    padding: 7px 20px 7px 20px;
 }
 
 .mt-3 {
