--- a/client/src/app/groceries-list/groceries-list.component.css
+++ b/client/src/app/groceries-list/groceries-list.component.css
@@ -1,72 +1,77 @@
 .mt-3 {
-    padding: 10px 0 0 30px;
+  padding: 10px 0 0 30px;
 }
 
-.card-contents{
-    margin-bottom: 5em;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+.card-contents {
+  margin-bottom: 5em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .tile {
-    display: flex;
-    flex-direction: column;
-    justify-content:start;
-    width: 100%; 
-    align-items: stretch;
-    padding: 10px 5px 5px 6px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  width: 100%;
+  align-items: stretch;
+  padding: 10px 5px 5px 6px;
+}
+
 .tile-container {
-    padding: 0em 1em 10em 1em;
+  padding: 0em 1em 10em 1em;
 }
 
 .button-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: flex-end;
-    padding: 0px 10px 10px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding: 0px 10px 10px 0px;
 }
 
 .notebook-one {
-    width: 90%;
-    border-radius: 3px;
-    background-color: rgb(255, 255, 255);
-    padding: 20px 5px 5px 15px;
-    background-image: linear-gradient(#ccc 1.1px, transparent 1px);
-    background-size: 100% 30px;
+  width: 100%;
+  border-radius: 3px;
+  background-color: rgb(255, 255, 255);
+  padding: 80px 90px 5px 90px;
+
+  background-image: linear-gradient(#ccc 1.1px, transparent 1px);
+  background-size: 100% 30px;
 }
 
 .notebook-two {
-    width: 90%;
-    border-radius: 3px;
-    background-color: rgb(252, 245, 236);
-    padding: 80px 5px 5px 15px;
-    background-image: linear-gradient(#ccc 1px, transparent 1px);
-    background-size: 20px 30px;
+  width: 90%;
+  border-left: 2px solid rgb(198, 98, 98);
+  position:relative;
+  height: 100%;
+  border-radius: 3px;
+  background-color: rgb(252, 245, 236);
+  padding: 80px 90px 5px 90px;
+  background-image: linear-gradient(#ccc 1px, transparent 1px);
+  background-size: 20px 30px;
 }
 
 .post-it {
-    background-color: rgb(253, 253, 160);
-    border-radius: 2px;
-    
-    padding: 20px 5px 5px 15px;
-    box-shadow:2px 2px 10px darkgrey;
-    width: 90%; 
+  background-color: rgb(253, 253, 160);
+  color: rgb(103, 103, 6);
+  border-radius: 2px;
+  padding: 24px 5px 5px 18px;
+  box-shadow: 2px 2px 10px darkgrey;
+  width: 90%;
 }
 
 .post-it-two {
-    background-color: rgb(255, 163, 244);
-    border-radius: 2px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 20px 5px 5px 15px;
-    box-shadow:2px 2px 10px darkgrey;
-    width: 90%; 
+  background-color: rgb(255, 163, 244);
+  color: rgb(93, 41, 87);
+  border-radius: 2px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 24px 5px 5px 18px;
+  box-shadow: 2px 2px 10px darkgrey;
+  width: 90%;
 }
