--- a/client/src/app/groceries-list/groceries-list.component.html
+++ b/client/src/app/groceries-list/groceries-list.component.html
@@ -1,7 +1,3 @@
-<div class="mt-3">
-  <button color="primary" mat-raised-button routerLink="/all">All Items</button>
-</div>
-
 <div class="tile-container">
   <mat-grid-list cols="10">
     <mat-grid-tile colspan="3" rowspan="3">
@@ -14,7 +10,7 @@
               *ngIf="item.frequency == 'One-Time Request'"
             >
               <div class="card-contents-item">
-                <h6>{{ item.item }}</h6>
+                <b>{{ item.item }}</b>
               </div>
               <div class="card-contents-inStock">
                 {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
@@ -46,7 +42,7 @@
           <div *ngFor="let item of items$ | async">
             <mat-card class="card-contents" *ngIf="item.frequency == 'Monthly'">
               <div class="card-contents-item">
-                {{ item.item }}
+                <b>{{ item.item }}</b>
               </div>
 
               <div class="card-contents-inStock">
@@ -83,7 +79,7 @@
             *ngIf="item.frequency == 'Indefinite'"
           >
             <div class="card-contents-item">
-              {{ item.item }}
+              <b>{{ item.item }}</b>
             </div>
 
             <div class="card-contents-inStock">
@@ -117,7 +113,7 @@
           <div *ngFor="let item of items$ | async">
             <div class="card-contents" *ngIf="item.frequency == 'Weekly'">
               <div class="card-contents-item">
-                {{ item.item }}
+                <b>{{ item.item }}</b>
               </div>
 
               <div class="card-contents-inStock">
