--- a/client/src/app/groceries-list/groceries-list.component.css
+++ b/client/src/app/groceries-list/groceries-list.component.css
@@ -20,7 +20,8 @@
 }
 
 .tile-container {
-  padding: 0em 1em 10em 1em;
+  padding: 1em 1em 10em 1em;
+  height:100%;
 }
 
 .button-container {
@@ -35,7 +36,7 @@
   width: 100%;
   border-radius: 3px;
   background-color: rgb(255, 255, 255);
-  padding: 80px 90px 5px 90px;
+  padding: 80px 90px 5px 50px;
 
   background-image: linear-gradient(#ccc 1.1px, transparent 1px);
   background-size: 100% 30px;
@@ -48,7 +49,7 @@
   height: 100%;
   border-radius: 3px;
   background-color: rgb(252, 245, 236);
-  padding: 80px 90px 5px 90px;
+  padding: 80px 90px 5px 50px;
   background-image: linear-gradient(#ccc 1px, transparent 1px);
   background-size: 20px 30px;
 }
@@ -57,6 +58,11 @@
   background-color: rgb(253, 253, 160);
   color: rgb(103, 103, 6);
   border-radius: 2px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   padding: 24px 5px 5px 18px;
   box-shadow: 2px 2px 10px darkgrey;
   width: 90%;
