--- a/client/src/app/groceries-list/groceries-list.component.css
+++ b/client/src/app/groceries-list/groceries-list.component.css
@@ -8,6 +8,8 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  width:100%;
+  height:100%;
 }
 
 .tile {
@@ -15,13 +17,15 @@
   flex-direction: column;
   justify-content: start;
   width: 100%;
+  height: 100%;
   align-items: stretch;
   padding: 10px 5px 5px 6px;
 }
 
 .tile-container {
-  padding: 1em 1em 10em 1em;
-  height:100%;
+  padding:10px 1em 10em 1em;
+  height: 100%;
+  width: 100%;
 }
 
 .button-container {
@@ -34,22 +38,21 @@
 
 .notebook-one {
   width: 100%;
+  height:100%;
   border-radius: 3px;
   background-color: rgb(255, 255, 255);
-  padding: 80px 90px 5px 50px;
-
+  padding: 80px 45px 5px 55px;
   background-image: linear-gradient(#ccc 1.1px, transparent 1px);
   background-size: 100% 30px;
 }
 
 .notebook-two {
-  width: 90%;
+  width: 80%;
+  height:95%;
   border-left: 2px solid rgb(198, 98, 98);
-  position:relative;
-  height: 100%;
   border-radius: 3px;
   background-color: rgb(252, 245, 236);
-  padding: 80px 90px 5px 50px;
+  padding: 80px 45px 5px 55px;
   background-image: linear-gradient(#ccc 1px, transparent 1px);
   background-size: 20px 30px;
 }
