--- a/client/src/app/groceries-list/groceries-list.component.css
+++ b/client/src/app/groceries-list/groceries-list.component.css
@@ -3,19 +3,19 @@
 }
 
 .card-contents {
-  margin-bottom: 5em;
+  margin-bottom: 1em;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
 }
 
 .tile {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   width: 100%;
   height: 100%;
   align-items: stretch;
@@ -23,9 +23,21 @@
 }
 
 .tile-container {
-  padding:10px 1em 10em 1em;
+  padding: 10px 1em 10em 1em;
   height: 100%;
   width: 100%;
+}
+
+.one-time-form {
+  display: flex;
+  flex-direction: row;
+}
+
+.itemStock,
+.itemName {
+  border: none;
+  width: 30%;
+  background-color: rgb(253, 253, 239);
 }
 
 .button-container {
@@ -38,9 +50,10 @@
 
 .notebook-one {
   width: 100%;
-  height:100%;
+  height: 100%;
   border-radius: 3px;
   background-color: rgb(255, 255, 255);
+  color:rgb(62, 62, 62);
   padding: 80px 45px 5px 55px;
   background-image: linear-gradient(#ccc 1.1px, transparent 1px);
   background-size: 100% 30px;
@@ -48,7 +61,8 @@
 
 .notebook-two {
   width: 80%;
-  height:95%;
+  height: 95%;
+  color:rgb(75, 75, 75);
   border-left: 2px solid rgb(198, 98, 98);
   border-radius: 3px;
   background-color: rgb(252, 245, 236);
@@ -58,7 +72,7 @@
 }
 
 .post-it {
-  background-color: rgb(253, 253, 160);
+  background-color: rgb(253, 253, 138);
   color: rgb(103, 103, 6);
   border-radius: 2px;
   display: flex;
