--- a/client/src/app/groceries-list/groceries-list.component.html
+++ b/client/src/app/groceries-list/groceries-list.component.html
@@ -25,9 +25,15 @@
               </div>
             </div>
           </div>
-
+          <div *ngIf="addOneTime">
+            <form class="one-time-form" (ngSubmit)="submitOne()">
+              <input type="text" class="itemName" matInput required/>
+              <input type="number" class="itemStock" matInput>
+              <button type="submit" mat-mini-fab color="primary"><mat-icon >check</mat-icon></button>
+            </form>
+          </div>
           <div class="button-container">
-            <button mat-fab color="primary">
+            <button mat-fab color="primary" (click)="toggleOne()">
               <mat-icon>add</mat-icon>
             </button>
           </div>
@@ -59,8 +65,15 @@
               </div>
             </mat-card>
           </div>
+          <div *ngIf="addMonthly">
+            <form class="monthly-form">
+              <input type="text" class="itemName" matInput required/>
+              <input type="number" class="itemStock" matInput>
+              <button type="submit" mat-mini-fab color="primary" (click)="submitMonth()"><mat-icon >check</mat-icon></button>
+            </form>
+          </div>
           <div class="button-container">
-            <button mat-fab color="primary">
+            <button mat-fab color="primary" (click)="toggleMonth()">
               <mat-icon>add</mat-icon>
             </button>
           </div>
@@ -70,40 +83,36 @@
 
     <mat-grid-tile colspan="4" rowspan="6">
       <div class="notebook-one">
-      <h5>Indefinite</h5>
-      <div class="tile">
-        
-        <div *ngFor="let item of items$ | async">
-          <div
-            class="card-contents"
-            *ngIf="item.frequency == 'Indefinite'"
-          >
-            <div class="card-contents-item">
-              <b>{{ item.item }}</b>
-            </div>
+        <h4>Indefinite</h4>
+        <div class="tile">
+          <div *ngFor="let item of items$ | async">
+            <div class="card-contents" *ngIf="item.frequency == 'Indefinite'">
+              <div class="card-contents-item">
+                <b>{{ item.item }}</b>
+              </div>
 
-            <div class="card-contents-inStock">
-              {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
-            </div>
+              <div class="card-contents-inStock">
+                {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
+              </div>
 
-            <div class="item-buttons">
-              <button color="primary" mat-icon-button>
-                <mat-icon fontIcon="mode" />
-              </button>
-              <button color="warn" mat-icon-button>
-                <mat-icon fontIcon="delete" />
-              </button>
+              <div class="item-buttons">
+                <button color="primary" mat-icon-button>
+                  <mat-icon fontIcon="mode" />
+                </button>
+                <button color="warn" mat-icon-button>
+                  <mat-icon fontIcon="delete" />
+                </button>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="button-container">
-          <button mat-fab color="primary">
-            <mat-icon>add</mat-icon>
-          </button>
+          <div class="button-container">
+            <button mat-fab color="primary">
+              <mat-icon>add</mat-icon>
+            </button>
+          </div>
         </div>
       </div>
-</div>
     </mat-grid-tile>
 
     <mat-grid-tile colspan="6" rowspan="3">
