--- a/client/src/app/groceries-list/groceries-list.component.css
+++ b/client/src/app/groceries-list/groceries-list.component.css
@@ -33,12 +33,7 @@
   flex-direction: row;
 }
 
-.itemStock,
-.itemName {
-  border: none;
-  width: 30%;
-  background-color: rgb(253, 253, 239);
-}
+
 
 .button-container {
   display: flex;
@@ -59,14 +54,24 @@
   background-size: 100% 30px;
 }
 
+.red-line{
+  margin: 0;
+  margin-left: -1.5em;;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  border-left: 2px solid rgb(198, 98, 98);
+  height:95%;
+}
+
 .notebook-two {
-  width: 80%;
+  width: 95%;
   height: 95%;
   color:rgb(75, 75, 75);
-  border-left: 2px solid rgb(198, 98, 98);
   border-radius: 3px;
   background-color: rgb(252, 245, 236);
-  padding: 80px 45px 5px 55px;
+  padding: 80px 45px 5px 90px;
   background-image: linear-gradient(#ccc 1px, transparent 1px);
   background-size: 20px 30px;
 }
@@ -76,13 +81,30 @@
   color: rgb(103, 103, 6);
   border-radius: 2px;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   padding: 24px 5px 5px 18px;
   box-shadow: 2px 2px 10px darkgrey;
   width: 90%;
+  height:75%
+}
+
+.monthlyStock,
+.monthlyItem{
+  border:none;
+  width: 30%;
+  background-color: rgb(255, 191, 246);
+
+}
+
+
+.oneStock,
+.oneItem {
+  border: none;
+  width: 30%;
+  background-color: rgb(253, 253, 239);
 }
 
 .post-it-two {
@@ -90,11 +112,12 @@
   color: rgb(93, 41, 87);
   border-radius: 2px;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap:nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   padding: 24px 5px 5px 18px;
   box-shadow: 2px 2px 10px darkgrey;
   width: 90%;
+  height:75%;
 }
