input one-time-form fixed

--- a/client/src/app/groceries-list/groceries-list.component.html
+++ b/client/src/app/groceries-list/groceries-list.component.html
@@ -27,8 +27,8 @@
           </div>
           <div *ngIf="addOneTime">
             <form class="one-time-form" (ngSubmit)="submitOne()">
-              <input type="text" class="oneItem" matInput required/>
-              <input type="number" class="oneStock" matInput>
+              <input type="text" class="oneItem" required/>
+              <input type="number" class="oneStock">
               <button type="submit" mat-mini-fab color="primary"><mat-icon >check</mat-icon></button>
             </form>
           </div>
