--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,13 +1,23 @@
+.toolbar {
+  background-color: rgb(255, 255, 255);
+  font-size: larger;
+}
+
+button {
+  padding:25px 0 25px 0;
+  font-size: large;
+}
+
 .sideNav {
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0 2px 0 2px;
+  padding: 10px 0px 10px 0px;
 }
 
 .sideNavCont {
   width: 14%;
-  background-color: rgb(169, 167, 162);
+  background-color: rgb(163, 160, 148);
 }
 
 .sideBarNavigation {
