--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,10 +1,8 @@
 
-<mat-toolbar>
+<mat-toolbar class="toolbar">
   <button
     mat-icon-button
     (click)="sideNav.toggle()"
-    class="example-icon"
-    aria-label="Example icon-button with menu icon"
   >
     <mat-icon>menu</mat-icon>
   </button>
@@ -16,7 +14,7 @@
 
   <mat-sidenav class="sideNavCont"  #sideNav mode="side" [(opened)]="opened">
     <div class="sideNav">
-    <button mat-button routerLink="/groceries">List</button>
+    <button mat-button routerLink="/groceries">Lists</button>
     <button mat-button routerLink="/all">All Items</button>
     </div>
   </mat-sidenav>
