--- a/client/src/app/groceries-list/groceries-list.component.html
+++ b/client/src/app/groceries-list/groceries-list.component.html
@@ -26,9 +26,9 @@
             </div>
           </div>
           <div *ngIf="addOneTime">
-            <form class="one-time-form" (ngSubmit)="submitOne()">
-              <input type="text" class="oneItem" placeholder="Item" matInput required/>
-              <input type="number" class="oneStock" placeholder="In Stock" matInput>
+            <form class="one-time-form"[formGroup]="oneTimeForm" (ngSubmit)="submitOne()">
+              <input formControlName="item" type="text" class="oneItem" placeholder="Item" matInput required/>
+              <input formControlName="inStock" type="number" class="oneStock" placeholder="In Stock" matInput>
               <button type="submit" mat-icon-button color="primary"><mat-icon fontIcon="done"/></button>
             </form>
           </div>
@@ -66,9 +66,9 @@
             </div>
           </div>
           <div *ngIf="addMonthly">
-            <form class="monthly-form" (ngSubmit)="submitMonth()">
-              <input type="text" class="monthlyItem" placeholder="Item" matInput required/>
-              <input type="number" class="monthlyStock" placeholder="In Stock" matInput>
+            <form class="monthly-form" [formGroup]="monthlyForm" (ngSubmit)="submitMonth()">
+              <input formControlName="item" type="text" class="monthlyItem" placeholder="Item" matInput required/>
+              <input formControlName="inStock" type="number" class="monthlyStock" placeholder="In Stock" matInput>
               <button type="submit" mat-icon-button color="primary"><mat-icon fontIcon="done"/></button>
             </form>
           </div>
