--- a/client/src/app/groceries-list/groceries-list.component.css
+++ b/client/src/app/groceries-list/groceries-list.component.css
@@ -7,13 +7,13 @@
 }
 
 .card-contents {
-  margin-bottom: 1em;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 100%;
+  size:10px;
 }
 
 .tile {
@@ -50,7 +50,6 @@
 
 .notebook-one {
   width: 100%;
-  height: 100%;
   border-radius: 3px;
   background-color: rgb(255, 255, 255);
   color:rgb(62, 62, 62);
@@ -67,12 +66,26 @@
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   border-left: 2px solid rgb(198, 98, 98);
-  height:95%;
+  
+}
+
+.indefStock,
+.indefStore,
+.indefItem {
+  border:none;
+  width:30%;
+  background-color: rgb(255, 255, 255);
+}
+.weeklyStock,
+.weeklyStore,
+.weeklyItem{
+  border:none;
+  width:30%;
+  background-color: rgb(252, 245, 236);
 }
 
 .notebook-two {
   width: 95%;
-  height: 95%;
   color:rgb(75, 75, 75);
   border-radius: 3px;
   background-color: rgb(252, 245, 236);
@@ -93,9 +106,10 @@
   padding: 24px 5px 5px 18px;
   box-shadow: 2px 2px 10px darkgrey;
   width: 90%;
-  height:75%
 }
 
+.indef-form,
+.weekly-form,
 .monthly-form,
 .one-time-form {
   display: flex;
@@ -105,7 +119,10 @@
   padding: 0px 10px 10px 10px;
 }
 
+
+
 .monthlyStock,
+.monthlyStore,
 .monthlyItem{
   border:none;
   width: 30%;
@@ -114,6 +131,7 @@
 }
 
 .oneStock,
+.oneStore,
 .oneItem {
   border: none;
   width: 30%;
@@ -132,5 +150,4 @@
   padding: 24px 5px 5px 18px;
   box-shadow: 2px 2px 10px darkgrey;
   width: 90%;
-  height:75%;
 }
